--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <section class="center">
-  <%= button_to "Find Top Rated Movies", "/movies/top_rated", method: :get %>
+  <%= button_to "Find Top Rated Movies", movies_top_rated_path, method: :get %>
   <br>
   <p>OR</p>
   <br>
