--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
   <p>OR</p>
   <br>
   <%= form_tag("/movies/search") do %>
-    <%= text_field_tag :find_movies, nil, placeholder: 'Search by movie title' %>
+    <%= text_field_tag :find_movies, nil, placeholder: 'Search by movie title', :required => true %>
     <%= submit_tag 'Find Movies', class: 'submit' %>
   <% end %>
 </section>
