Added button to return home on movie show page

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,3 +1,5 @@
+<%= button_to "Return Home", "/", method: :get %>
+
 <h1><%= @movie.original_title %></h1>
 <% if @crew.find {|member| member.job == "Director"} %>
   <p>Directed by: <%= @crew.find {|member| member.job == "Director"}.name %></p>
