--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,12 +1,18 @@
 <%= button_to "Return Home", "/", method: :get %>
-
-<h1><%= @movie.original_title %></h1>
-<% if @crew.find {|member| member.job == "Director"} %>
-  <p>Directed by: <%= @crew.find {|member| member.job == "Director"}.name %></p>
-<% else %>
-  <p>Directed by: Unknown</p>
-<% end %>
-<p>Released: <%= @movie.release_date %> | Average MovieDB Rating: <%= @movie.vote_average %> | Runtime: <%= @movie.runtime %> mins | Genre(s): <%= @movie.genre_names %> </p>
+<div class= "center">
+  <h1><%= @movie.original_title %></h1>
+    <% if @movie.poster_path %>
+    <div class="poster">
+      <img src='http://image.tmdb.org/t/p/w500/<%= "#{@movie.poster_path}" %> ' alt="Girl in a jacket" width="300" height="400">
+    <% end %>
+  </div>
+  <% if @crew.find {|member| member.job == "Director"} %>
+    <p>Directed by: <%= @crew.find {|member| member.job == "Director"}.name %></p>
+  <% else %>
+    <p>Directed by: Unknown</p>
+  <% end %>
+  <p>Released: <%= @movie.release_date %> | Average MovieDB Rating: <%= @movie.vote_average %> | Runtime: <%= @movie.runtime %> mins | Genre(s): <%= @movie.genre_names %> </p>
+</div>
 <hr>
 <% if @votes.nil? %>
   <h3>Have you seen this movie? If so click the emoji to vote!</h3>
